# auger

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-run.sh
.github/workflows/: ci.yml
apps/www/: package-lock.json  package.json  tailwind.config.ts
apps/www/src/app/: globals.css  layout.tsx
apps/www/src/app/api/ask/: route.ts
apps/www/src/app/editor/: page.tsx
apps/www/src/app/projects/: page.tsx
apps/www/src/components/: chat-panel.tsx  code-editor.tsx  context-menu.tsx  cross-reference-panel.tsx  editor-footer.tsx  layout.tsx  project-card.tsx  resizable-panel.tsx  symbols-panel.tsx  tab-bar.tsx
apps/www/src/hooks/: use-keyboard-shortcut.ts
apps/www/src/lib/: utils.ts
crates/core/: Cargo.toml
crates/core/src/: consts.rs  demangler.rs  error.rs  hash.rs  lib.rs  main.rs  memory.rs  model.rs  parser.rs  utils.rs  writer.rs
crates/core/src/analyzers/: base.rs  mod.rs  syscalls.rs
crates/core/src/models/: base.rs  func.rs  lists.rs  mapping.rs  mod.rs  primitive.rs  reg.rs
crates/core/src/parsing/: anchor.rs  base_parser.rs  lld.rs  mod.rs  native.rs
crates/core/src/resolvers/: base.rs  mod.rs  solana.rs  standard.rs  struct_resolver.rs
crates/core/src/syn/: docs.rs  mod.rs  patterns.rs  plugin.rs
crates/core/src/traits/: analyzer.rs  mod.rs  parser.rs  plugin.rs  resolver.rs
crates/core/src/utils/: format.rs  hash.rs  mod.rs  parsing.rs  writer.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  lib.rs  logging.rs  main.rs  storage.rs  utils.rs
outputs/: dataset.json
scripts/: binja-xref-reverse.py  binja-xref.py  build-all-repos.py  dump-programs.py  programs.json
src/: consts.rs  lib.rs  main.rs  model.rs  parser.rs  utils.rs  writer.rs
templates/: idl.jinja
