[package]
name = "auger"
version = "0.1.0"
edition = "2021"
authors = ["Joey Meere <@joeymeere>"]
description = "A tool for extracting information from sBPF binaries"

[dependencies]
ezbpf-core = { git = "https://github.com/deanmlittle/ezbpf", branch = "master" }
anyhow = "1.0.86"
regex = "1.11.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
clap = { version = "4.5.3", features = ["derive"] }
colored = "3.0.0"
sha2 = "0.10.8"
bs58 = "0.5.1"
log = "0.4.20"

[dev-dependencies]
hex-literal = "0.4.1" 

