[package]
name = "auger"
version = "0.1.0"
edition = "2021"
authors = ["Joey Meere <@joeymeere>"]
description = "A tool for extracting information from sBPF binaries"

[dependencies]
ezbpf-core = { git = "https://github.com/deanmlittle/ezbpf", branch = "master" }
anyhow = "1.0.86"
regex = "1.11.1"
gimli = "0.31.1"
object = "0.36.7"
memmap2 = "0.9.5"
serde_json = "1.0.117"
thiserror = "1.0.61"
colored = "3.0.0"
sha2 = "0.10.8"
bs58 = "0.5.1"
log = "0.4.20"
env_logger = "0.11.3"
proc-macro2 = "1.0.94"
syn = "2.0.100"
quote = "1.0.40"
serde = { version = "1.0.203", features = ["derive"] }
clap = { version = "4.5.3", features = ["derive"] }
solana-sbpf = "0.10.0"
solana-sdk = "1.18.8"

[dev-dependencies]
hex-literal = "0.4.1" 

