[package]
name = "auger-server"
version = "0.1.0"
edition = "2021"
authors = ["Joey Meere <@joeymeere>"]
description = "A tool for extracting information from sBPF binaries"

[dependencies]
auger = { path = "../core" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
anyhow = "1.0.86"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.34", features = ["serde"] }
solana-sdk = "1.18.8"
solana-client = "1.18.8"
solana-program = "1.18.8"